# sigpt

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  test.yaml
scripts/: train.py
sigpt/model/: sample.py
sigpt/model/tests/: test_model.py
sigpt/server/: serve.py
src/model/: architecture.py  sample.py
src/sigpt/: architecture.py  config.py  data.py  env.py  inference.py  log.py  logging.py  sample.py  serve.py  train.py
src/sigpt/server/: serve.py
src/sigpt/server/tests/: test_api.py
src/sigpt/tests/: test_api.py  test_architecture.py  test_config.py  test_data.py  test_inference.py  test_sample.py  test_train.py
