[project]
name = "sigpt"
version = "0.1.0"
description = "SI's attempt at creating a GPT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "better-profanity>=0.7.0",
    "fastapi>=0.115.5",
    "numpy>=2.1.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
train = [
    "datasets>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

